[package]
name = "rtr"
version = "0.1.2"
authors = ["Clément Guiton <clement.guiton.dev@gmail.com>"]
edition = "2018"
description = "A crate to manually translate strings in your program"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
string_format = "0.1.0"